# atlassian-migration-auditor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
auditor/: aggregate.py  cfvalues.py  client.py  cloneaccess.py  compare.py  config_audit.py  connectors.py  extract.py  findings.py  permissions.py  scope.py  solutions.py  textnorm.py
auditor/confluence/: client.py  compare.py  extract.py  macros.py
auditor/envaudit/: __init__.py  _pool.py  analysis.py  apply.py  checks.py  confluence_apply.py  confluence_checks.py  confluence_gather.py  deeplinks.py  fixes.py  gather.py  headless.py  report.py
auditor/remediation/: __init__.py  apply.py  guidance.py  payload.py  plan.py  reaudit.py  registry.py  usergap.py  values.py
scripts/: seed_demo.py
tests/: test_aggregate.py  test_aggregate_counts.py  test_ai_provider.py  test_analysis.py  test_anthropic_key.py  test_apply.py  test_cfvalues.py  test_client.py  test_client_writes.py  test_clone_cli.py  test_clone_routes.py  test_clone_store_runner.py  test_cloneaccess.py  test_compare.py  test_config.py  test_config_audit.py  test_confluence_checks.py  test_confluence_client.py  test_confluence_compare.py  test_confluence_extract.py  test_confluence_fix.py  test_confluence_gather.py  test_connections.py  test_connectors.py  test_deeplinks.py  test_env_analysis.py  test_env_analysis_sectioned.py  test_env_checks.py  test_env_fix.py  test_env_fix_grouping.py  test_env_fix_safety_concurrency.py  test_env_fixes.py  test_env_gather.py  test_env_report.py  test_env_routes.py  test_env_run.py  test_export.py  test_extract.py  test_findings.py  test_fix_routes.py  (+25 more)
webapp/: ai_provider.py  analysis.py  anthropic_key.py  clone_routes.py  clone_runner.py  compare.py  config.py  env_fix_routes.py  env_fix_stages.py  env_stages.py  export.py  fix_stages.py  main.py  oauth.py  remediate.py  report.py  runs.py  stages.py  store.py
(+61 files in other folders)
